[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/GUI/strength.png" type="Texture" id=2]
[ext_resource path="res://Art/GUI/SDS_8x8.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/GUI/agility.png" type="Texture" id=4]
[ext_resource path="res://Art/GUI/intelligence.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 640.0
margin_bottom = 32.0
rect_min_size = Vector2( 640, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="StrLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
custom_fonts/normal_font = SubResource( 1 )
text = "99/99"
scroll_active = false

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 152.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="AgiLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 236.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
custom_fonts/normal_font = SubResource( 1 )
text = "99/99"
scroll_active = false

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 272.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="IntLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_left = 276.0
margin_right = 356.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
custom_fonts/normal_font = SubResource( 1 )
text = "99/99"
scroll_active = false
